--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: badmos
       POSTGRES_DB: youtube_fetcher
     ports:
       - "5433:5432"
@@ -20,14 +20,13 @@ services:
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
-      - DB_PASSWORD=postgres
+      - DB_PASSWORD=badmos
       - DB_NAME=youtube_fetcher
       - SEARCH_QUERY=breaking news|live news|news today|world news|current events|latest updates
       - FETCH_INTERVAL=60
       - PORT=8080
     ports:
       - "8080:8080"
-    entrypoint: ["/app/docker-entrypoint.sh"]
 
 volumes:
   postgres_data:
