--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3.8'
 services:
   postgres:
@@ -36,6 +35,8 @@ services:
     ports:
       - "8080:8080"
     restart: unless-stopped
+    stdin_open: true
+    tty: true
 
 volumes:
   postgres_data:
